# benchmark-dataloader

./: .env.example  .gitignore  .gitmodules  README.md  main.py  prepare_datasets.py  pyproject.toml  stream_datasets.py  visualize.py
.kaggle/: kaggle.json
optimize/: litdata_converter.py  prepare_mosaicdataset.py  prepare_webdataset.py
prepare_data/: dataset.yaml  litdata_converter.py  mosaicdataset_converter.py  prepare_energon.py  prepare_litdata.py  prepare_mosaicdataset.py  prepare_webdataset.py  webdataset_converter.py
results/: latest_summary.txt  summary_20250414_022250.txt  summary_20250414_044411.txt  summary_20250414_053407.txt  summary_20250415_053235.txt
results/processing/: summary_20250415_205007.txt  summary_20250424_055525.txt  sweep_summary_20250424_071226.txt
results/processing/16_workers/: summary_20250424_071226.txt
results/processing/1_workers/: summary_20250424_070616.txt
results/processing/2_workers/: summary_20250424_070746.txt
results/processing/4_workers/: summary_20250424_070914.txt
results/processing/8_workers/: summary_20250424_071044.txt
results/streaming/: summary_stream_20250415_084132.txt  summary_stream_20250415_084515.txt  sweep_results.csv
results/streaming/w16_p1_b1024/: summary_20250425_075302.txt
results/streaming/w16_p1_b128/: summary_20250425_043542.txt
results/streaming/w16_p1_b256/: summary_20250425_054137.txt
scripts/: cut_down_data.sh  download_shard.sh  prepare_datasets.sh  stream_datasets.sh
slurm_scripts/: slurm_prepare_datasets.sh
stream/: energon.py  generate_msc_config.py  lightning_data.py  mosaic_ml.py  utils.py  web_dataset.py
(+33 files in other folders)
