[project]
name = "benchmark-dataloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "fastparquet>=2024.11.0",
    "jsonargparse>=4.38.0",
    "kaggle>=1.7.4.2",
    "kornia>=0.8.0",
    "mosaicml-streaming>=0.12.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "torchvision>=0.21.0",
    "webdataset>=0.2.111",
]
